--- a/index.html
+++ b/index.html
@@ -56,81 +56,81 @@
                         <p class="text-center mb-2">Front-end</p>
                         <div class="flex justify-between mb-3">
                             <p>HTML</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>CSS</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>JS - JQuery</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 90%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>ReactJS - VueJS</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 95%"> <p></p></div>
                             </div>
                         </div>
                         <p class="text-center mb-2">Back-end</p>
                         <div class="flex justify-between mb-3">
                             <p>Node - Express</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>Laravel</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 70%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>Wordpress</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 65%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>SQL</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 60%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>MongoDB</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
                             </div>
                         </div>
                         <p class="text-center mb-2">CSS</p>
                         <div class="flex justify-between mb-3">
                             <p>Tailwind</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 90%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>Bootstrap</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>SASS - SCSS</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 70%"> <p></p></div>
                             </div>
                         </div>
                         <div class="flex justify-between mb-3">
                             <p>AOS</p>
-                            <div class="w-3/4 bg-gray-200/0 border-r">
+                            <div class="w-3/4 bg-gray-200/0">
                                 <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 90%"> <p></p></div>
                             </div>
                         </div>
