--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="w-full mx-auto h-full pt-16 text-white" data-aos="fade-right" data-aos-duration="1500">
             <div class="m-36 justify-center flex">
                 <div class="duration-700 relative hover:w-[65%] hover:h-[65%] w-[60%] h-[60%]">
-                    <img src="./images/twitter.png"/>
+                    <img class="shadow-2xl" src="./images/twitter.png"/>
                 </div>
                 <div class="relative right-56 top-20 w-2/6">
                     <p class="text-right mb-4 text-cyan-400">Projet Actuel</p>
