--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="mt-28 text-center text-cyan-400 text-2xl mb-10">
                 A propos
             </p>
-            <div class="ml-36 h-full flex justify-between">
+            <div class="ml-36 h-full flex justify-evenly">
                 <div class="ml-28 h-2/3 flex flex-col w-2/5 justify-evenly">
                     <p>
                         Bonjour a tous ! Et bienvenue sur mon site !
@@ -52,88 +52,8 @@
                         Mon Back préféré : <span class="text-cyan-400">NodeJS</span> ou <span class="text-cyan-400">Laravel</span>
                     </p>
                 </div>
-                <div class="hidden duration-700 rounded-l-xl h-min p-4 w-2/5 bg-[#112240] shadow-2xl">
-                        <!-- <p class="text-center mb-2">Front-end</p>
-                        <div class="flex justify-between mb-3">
-                            <p>HTML</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>CSS</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>JS - JQuery</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 90%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>ReactJS - VueJS</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 95%"> <p></p></div>
-                            </div>
-                        </div>
-                        <p class="text-center mb-2">Back-end</p>
-                        <div class="flex justify-between mb-3">
-                            <p>Node - Express</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>Laravel</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 70%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>Wordpress</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 65%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>SQL</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 60%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>MongoDB</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
-                            </div>
-                        </div>
-                        <p class="text-center mb-2">CSS</p>
-                        <div class="flex justify-between mb-3">
-                            <p>Tailwind</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 90%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>Bootstrap</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 80%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>SASS - SCSS</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 70%"> <p></p></div>
-                            </div>
-                        </div>
-                        <div class="flex justify-between mb-3">
-                            <p>AOS</p>
-                            <div class="w-3/4 bg-gray-200/0">
-                                <div class="h-full bg-[#FC5656] text-xs font-medium text-blue-100 text-center p-1.5 leading-none" style="width: 90%"> <p></p></div>
-                            </div>
-                        </div> -->
+                <div class="duration-700 rounded-l-xl h-4/6 p-4 w-2/5 flex items-center">
+                        <img width="50%" height="50%" src="./images/me.png" />
                 </div>
             </div>
         </div>
@@ -142,7 +62,7 @@
         <!-- Personal project -->
         <div class="w-full mx-auto h-full pt-16 text-white" data-aos="fade-right" data-aos-duration="1500">
             <div class="m-36 justify-center flex">
-                <div class="hue-rotate-90 hover:hue-rotate-0 duration-700 relative hover:w-[65%] hover:h-[65%] w-[60%] h-[60%]">
+                <div class="duration-700 relative hover:w-[65%] hover:h-[65%] w-[60%] h-[60%]">
                     <img class="shadow-2xl" src="./images/twitter.png"/>
                 </div>
                 <div class="relative right-56 top-20 w-2/6">
